--- a/header.html
+++ b/header.html
@@ -27,6 +27,7 @@
         <a href="index.html" onclick="loadPage('index.html')">Home</a>
         <a href="about.html" onclick="loadPage('about.html')">About us</a>
         <a href="services.html" onclick="loadPage('services.html')">Services</a>>Services</a>
+        <a href="cprofile.html" onclick="loadPage('cprofile.html')">Services</a>>Services</a>
         <a href="#products">Products</a>
         <a href="contact.html" onclick="loadPage('contact.html')">Contact Us</a>
         <a href="#testimonials">Testimonials</a>
