--- a/cprofile.html
+++ b/cprofile.html
@@ -4,7 +4,7 @@
     <link href="css/header.css" rel='stylesheet'>
     <link href="css/circle.css" rel='stylesheet'>
 </head>
-<bbody class="bbody">
+<body class="bbody">
     <div id="navbar">
         <object type="text/html" data="header.html" style="width:100%; height:50px;"></object>
     </div>
@@ -49,13 +49,13 @@
                         <div class="circle-node">
                             <img src="images/akhilesh.jpeg">
                         </div>
-                        <span>Akhilesh</span>
+                        <span>Akhilesh H S</span>
                     </div>
                     <div class="node" style="--i: 2;">
                         <div class="circle-node">
                             <img src="images/syed.jpeg">
                         </div>
-                        <span>Syed </span>
+                        <span>Syed MHH</span>
                     </div>
                     <div class="node" style="--i: 3;">
                         <div class="circle-node">
@@ -79,7 +79,7 @@
                         <div class="circle-node">
                             <img src="images/sanjana.jpeg"/>
                         </div>
-                        <span>Sanjana</span>
+                        <span>Sanjana Samaga</span>
                     </div>
                 </div>
                 <div class="c_company-name">AZELIC TECHNOLOGIES</div>
@@ -117,7 +117,7 @@
         <p>&copy; 2024 Your Company Name. All Rights Reserved.</p>
         <p><a href="privacypolicy.html">Privacy Policy</a> | <a href="termsandconditions.html">Terms and Conditions</a></p>
     </footer>
-</bbody>
+</body>
 <script>
     function loadNavbar() {
     const xhr = new XMLHttpRequest();
