--- a/careers.html
+++ b/careers.html
@@ -11,7 +11,7 @@
 
 </head>
 
-<body>
+<body class="bbody">
     <div id="navbar">
         <object type="text/html" data="header.html" style="width:100%; height:50px;"></object>
     </div>
