--- a/support.html
+++ b/support.html
@@ -10,7 +10,7 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet" />
 </head>
 
-<body>
+<body class="bbody">
     <div id="navbar">
         <object type="text/html" data="header.html" style="width:100%; height:50px;"></object>
     </div>
