--- a/cprofile.html
+++ b/cprofile.html
@@ -3,6 +3,8 @@
     <link href="css/cprofile.css" rel='stylesheet'>
     <link href="css/header.css" rel='stylesheet'>
     <link href="css/circle.css" rel='stylesheet'>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet" />
+    
 </head>
 <body class="bbody">
     <div id="navbar">
