--- a/privacypolicy.html
+++ b/privacypolicy.html
@@ -3,6 +3,7 @@
     <title>Privacy Policy</title>
     <link rel="stylesheet" href="css/PP.css">
     <link rel="stylesheet" href="css/header.css">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet" />
 </head>
 <body>
     <div id="navbar">
