--- a/services.html
+++ b/services.html
@@ -2,6 +2,7 @@
     <head>
         <link rel="stylesheet" href="css/services.css">
         <link rel="stylesheet" href="css/header.css">
+        <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet" />
     </head>
 <body class='bbody'>
     <div id="navbar">
