--- a/termsandconditions.html
+++ b/termsandconditions.html
@@ -7,6 +7,7 @@
     <title>Terms and Conditions - Azelic Technologies</title>
     <link rel="stylesheet" href="css/t&c.css">
     <link rel="stylesheet" href="css/header.css">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet" />
 </head>
 
 <body>
