--- a/about.html
+++ b/about.html
@@ -38,47 +38,95 @@
                 </div>
             </div>
 
-            <div class="b-box-container">
-                <div class="team-section">
-                    <h3>Our Team</h3>
-
-                    <div class="new-member-container">
-                        <div class="new-member highlighted">
-                            <img src="https://via.placeholder.com/80" alt="New Member">
-                            <div>
-                                <h4>New Member</h4>
-                                <p>Role</p>
-                                <p class="description">
-                                    Brief description of the new member’s background and role within the team.
-                                </p>
-                            </div>
+            <div class="ceo-profile">
+                <img src="images/akhilesh.jpeg" alt="CEO Profile">
+                <div class="ceo-details">
+                    <h2>Akhilesh H S</h2>
+                    <p>CEO-Chief Executive Officer</p>
+                    <p>BE</p>
+                </div>
+            </div>
+            
+            <div class="photo-slider-container">
+                <div class="photo-slider">
+                    <div class="profile">
+                        <img src="images/Anil kumar.jpeg" alt="Profile 1">
+                        <div class="profile-details">
+                            <h3>Anil Kumar</h3>
+                            <p>CBDO-Chief Business Development Officer</p>
+                            <p>M.Tech(Ph. D)</p>
                         </div>
                     </div>
-
-                    <div class="team-layout">
-                        <div class="team-part">
-                            <div class="team-member">
-                                <img src="https://via.placeholder.com/80" alt="John Doe">
-                                <div>
-                                    <h4>John Doe</h4>
-                                    <p>Team Lead</p>
-                                    <p class="description">
-                                        John has over a decade of experience in product management and has overseen the development of over 50 successful tech products.
-                                    </p>
-                                </div>
-                            </div>
+                    <div class="profile">
+                        <img src="profile2.jpg" alt="Profile 2">
+                        <div class="profile-details">
+                            <h3>Deepthi</h3>
+                            <p>MBA</p>
+                            <p>CHRO-Chief Human Resources Officer</p>
                         </div>
-                        <div class="team-part">
-                            <div class="team-member">
-                                <img src="https://via.placeholder.com/80" alt="Jane Doe">
-                                <div>
-                                    <h4>Jane Doe</h4>
-                                    <p>Marketing Head</p>
-                                    <p class="description">
-                                        Jane leads the marketing team with passion, ensuring brand visibility and outreach to global markets.
-                                    </p>
-                                </div>
-                            </div>
+                    </div>
+                    <div class="profile">
+                        <img src="images/kavya.jpeg" alt="Profile 3">
+                        <div class="profile-details">
+                            <h3>N Kavya</h3>
+                            <p>CRO-Chief Revenue Officer</p>
+                            <p>BE</p>
+                        </div>
+                    </div>
+                    <div class="profile">
+                        <img src="images/navya.jpeg" alt="Profile 3">
+                        <div class="profile-details">
+                            <h3>Navyashri S</h3>
+                            <p>CPO-Chief Product Officer</p>
+                            <p>BE</p>
+                        </div>
+                    </div>
+                    <div class="profile">
+                        <img src="images/project.png" alt="Profile 3">
+                        <div class="profile-details">
+                            <h3>Pavan</h3>
+                            <p>COO-Chief Operating Officer</p>
+                            <p>BE</p>
+                        </div>
+                    </div>
+                    <div class="profile">
+                        <img src="images/project.png" alt="Profile 3">
+                        <div class="profile-details">
+                            <h3>Punith</h3>
+                            <p>CIO-Chief Information Officer</p>
+                            <p>MCA</p>
+                        </div>
+                    </div>
+                    <div class="profile">
+                        <img src="images/sahana.jpeg" alt="Profile 3">
+                        <div class="profile-details">
+                            <h3>Sahana G</h3>
+                            <p>CTO-Chief Technology Officer</p>
+                            <p>BE</p>
+                        </div>
+                    </div>
+                    <div class="profile">
+                        <img src="images/sanjana.jpeg" alt="Profile 3">
+                        <div class="profile-details">
+                            <h3>Sanjana Samaga</h3>
+                            <p>CLO-Chief Legal Officer</p>
+                            <p>BE</p>
+                        </div>
+                    </div>
+                    <div class="profile">
+                        <img src="images/syed.jpeg" alt="Profile 3">
+                        <div class="profile-details">
+                            <h3>Syed MHH</h3>
+                            <p>CMO-Chief Marketing Officer</p>
+                            <p>BE</p>
+                        </div>
+                    </div>
+                    <div class="profile">
+                        <img src="images/project.png" alt="Profile 3">
+                        <div class="profile-details">
+                            <h3>Veda</h3>
+                            <p>CFO-Chief Financial Officer</p>
+                            <p>B.com</p>
                         </div>
                     </div>
                 </div>
